--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: The Candid Canine
+email: rachelg@thecandidcanine.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+  Straightforward and Scientifically Sourced Dog Owner Training
 
-# Build settings
-markdown: kramdown
+  Teaching you to teach your dog!
+
+  Training, Behavioral Consults, Dog Walking and Pet Care
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "http://thecandidcanine.github.io" # the base hostname & protocol for your site
