--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,4 @@ description: > # this means to ignore newlines until "baseurl:"
   Straightforward and Scientifically Sourced Dog Owner Training<br><br>Teaching you to teach your dog!<br><br>Training, Behavioral Consults, Dog Walking and Pet Care
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://thecandidcanine.com" # the base hostname & protocol for your site
+facebook_username: thecandidcanine
